default/who/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: who
  namespace: default
spec:
  selector:
    app: who
  ports:
  - port: 80
    targetPort: 80
